syntax = "proto3";

option java_package = "ru.niktoizniotkyda.netschooltokenapp.data";
option java_multiple_files = true;

message Class {
 int32 class_id = 1;
 string class_name = 2;
}

message Organization {
 int32 organization_id = 1;
 bool is_add_school = 2;
 string name = 3;
}

message OrganizationInfo {
 repeated Class classes = 1;
 bool is_active = 2;
 Organization organization = 3;
}

message Children {
 int64 children_id = 1;
 string first_name = 2;
 string nick_name = 3;
 string login_name = 5;
 bool is_parent = 6;
 bool is_staff = 7;
 bool is_student = 8;
 repeated OrganizationInfo organizations = 9;
}

message ChildOrNull {
 oneof child_or_null {
  Children child = 1;
 }
}

message UserData {
 int32 user_id = 1;
 repeated ChildOrNull children = 2;
 string first_name = 3;
 string nick_name = 4;
 string login_name = 5;
 bool is_parent = 6;
 bool is_staff = 7;
 bool is_student = 8;
 repeated OrganizationInfo organizations = 9;
}

message TokenData {
 string id = 1;
 string token = 2;
 string refresh_token = 3;
 int64 time_to_refresh = 4;
 repeated UserData users = 5;
}

message AppSettings {
 repeated TokenData tokens = 1;
 string selected_token = 2;
 int32 selected_user_id = 3;
}
